--- a/index.html
+++ b/index.html
@@ -1856,21 +1856,20 @@
               </div>
             </div>
             <p class="portfolio__modal--info__desc mb-30">
-              Web Design: Focuses on the visual and experiential aspects of a
-              website. It involves creating an attractive layout, intuitive
-              navigation, and an engaging user interface to ensure a positive
-              visitor experience. Web Development: Involves the coding and
-              technical aspects of a website. It includes both front-end
-              development (visual elements) and back-end development
-              (server-side logic and databases) using languages like HTML, CSS,
-              JavaScript, and server-side technologies. App Development: Creates
-              software applications for mobile or desktop. It includes designing
-              the user interface, developing functionality, and ensuring
-              performance across devices, often using platform-specific
-              languages like Swift for iOS or Kotlin for Android. Together,
-              these disciplines create a cohesive digital strategy, combining
-              eye-catching design with robust functionality to deliver engaging
-              user experiences.
+              Focuses on the visual and experiential aspects of a website. It
+              involves creating an attractive layout, intuitive navigation, and
+              an engaging user interface to ensure a positive visitor
+              experience. Web Development: Involves the coding and technical
+              aspects of a website. It includes both front-end development
+              (visual elements) and back-end development (server-side logic and
+              databases) using languages like HTML, CSS, JavaScript, and
+              server-side technologies. App Development: Creates software
+              applications for mobile or desktop. It includes designing the user
+              interface, developing functionality, and ensuring performance
+              across devices, often using platform-specific languages like Swift
+              for iOS or Kotlin for Android. Together, these disciplines create
+              a cohesive digital strategy, combining eye-catching design with
+              robust functionality to deliver engaging user experiences.
             </p>
             <div class="portfolio__modal--info__media">
               <img src="assets/img/other/portfolio-big1.png" alt="img" />
