--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <span class="hero__content--subtitle text__secondary mb-10"
                 >HELLO I'M</span
               >
-              <h2 class="hero__content--title mb-15">Mortuza Bilash</h2>
+              <h2 class="hero__content--title mb-15">Mortaza Bilash</h2>
               <h3 class="hero__content--subtitle2 mb-20">
                 UX/UI Designer | Developer | CMS
               </h3>
