--- a/index.html
+++ b/index.html
@@ -2019,11 +2019,7 @@
                         </button>
                       </div>
                       <p class="reviews__comment--content__desc">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Eos ex repellat officiis neque. Veniam, rem
-                        nesciunt. Assumenda distinctio, autem error repellat
-                        eveniet ratione dolor facilis accusantium amet pariatur,
-                        non eius!
+loading
                       </p>
                     </div>
                   </div>
@@ -2051,11 +2047,7 @@
                         </button>
                       </div>
                       <p class="reviews__comment--content__desc">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Eos ex repellat officiis neque. Veniam, rem
-                        nesciunt. Assumenda distinctio, autem error repellat
-                        eveniet ratione dolor facilis accusantium amet pariatur,
-                        non eius!
+                     loading
                       </p>
                     </div>
                   </div>
