--- a/index.html
+++ b/index.html
@@ -1987,11 +1987,7 @@
                         </button>
                       </div>
                       <p class="reviews__comment--content__desc">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Eos ex repellat officiis neque. Veniam, rem
-                        nesciunt. Assumenda distinctio, autem error repellat
-                        eveniet ratione dolor facilis accusantium amet pariatur,
-                        non eius!
+               loading
                       </p>
                     </div>
                   </div>
