--- a/portfolio.html
+++ b/portfolio.html
@@ -868,13 +868,7 @@
               </div>
             </div>
             <p class="portfolio__modal--info__desc mb-30">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia
-              placeat magnam possimus iusto blanditiis pariatur labore explicabo
-              quo repellat hic dolorum numquam asperiores, voluptatum fugiat
-              reiciendis aspernatur, non, odio aperiam voluptas ex tempora
-              vitae. Dolor, consequatur quidem! Quas magni distinctio dolorum
-              dolore natus, vel numquam accusamus. Nostrum eligendi recusandae
-              qui tempore deserunt!
+        comming
             </p>
             <div class="portfolio__modal--info__media">
               <img src="assets/img/other/portfolio-big1.png" alt="img" />
