--- a/portfolio.html
+++ b/portfolio.html
@@ -809,7 +809,7 @@
                   ></span>
                   Languages :
                   <span class="portfolio__modal--info__name"
-                    >Photoshop, Illustration</span
+                    > let's go</span
                   >
                 </p>
               </div>
