--- a/portfolio.html
+++ b/portfolio.html
@@ -712,10 +712,9 @@
                           ></path>
                         </svg>
                       </span>
-                      <h3 class="portfolio__title text-white">Illustration</h3>
+                      <h3 class="portfolio__title text-white">  </h3>
                       <p class="portfolio__desc text-white">
-                        Promote your blog posts, case udie, and thehe branded
-                        videos.
+                       
                       </p>
                     </div>
                   </a>
